# internal/posts/app/app.go
@@ -13,6 +13,7 @@ type Application struct {
 type Commands struct {
 	CreatePost     command.CreatePostHandler
 	DeletePost     command.DeletePostHandler
+	UpdatePost     command.UpdatePostHandler
 	UpvotePost     command.UpvotePostHandler
 	RemoveUpvote   command.RemoveUpvoteHandler
 	DownvotePost   command.DownvotePostHandler
