# internal/posts/ports/openapi_types.gen.go
@@ -13,11 +13,6 @@ const (
 	BearerAuthScopes = "bearerAuth.Scopes"
 )
 
-// CreatePost defines model for CreatePost.
-type CreatePost struct {
-	Content string `json:"content"`
-}
-
 // Error defines model for Error.
 type Error struct {
 	Message string `json:"message"`
@@ -26,15 +21,21 @@ type Error struct {
 
 // Post defines model for Post.
 type Post struct {
-	Author   int64              `json:"author"`
-	Content  string             `json:"content"`
-	Id       openapi_types.UUID `json:"id"`
-	Karma    int64              `json:"karma"`
-	PostDate time.Time          `json:"postDate"`
+	Author     int64              `json:"author"`
+	Content    string             `json:"content"`
+	Id         openapi_types.UUID `json:"id"`
+	Karma      int64              `json:"karma"`
+	PostDate   time.Time          `json:"postDate"`
+	UpdateDate *time.Time         `json:"updateDate,omitempty"`
 }
 
 // PostArray defines model for PostArray.
 type PostArray = []Post
+
+// PostContent defines model for PostContent.
+type PostContent struct {
+	Content string `json:"content"`
+}
 
 // Status defines model for Status.
 type Status struct {
@@ -60,4 +61,7 @@ type GetPostsParams struct {
 }
 
 // CreatePostJSONRequestBody defines body for CreatePost for application/json ContentType.
-type CreatePostJSONRequestBody = CreatePost
+type CreatePostJSONRequestBody = PostContent
+
+// UpdatePostJSONRequestBody defines body for UpdatePost for application/json ContentType.
+type UpdatePostJSONRequestBody = PostContent
